# XO

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
lib/client/: client.cxx  client.hpp
lib/epoll_server/: epoll_server.cxx  epoll_server.hpp
lib/game_session/: game_session.cxx  game_session.hpp
lib/game_state/: game_state.cxx  game_state.hpp
lib/shared_mem/: shm_manager.cxx  shm_manager.hpp
src/: main.cxx
